--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,9 +1,9 @@
 name: Python Example 2 (GitHub UI)
  
 on:
-  push:
-    branches:
-      - main
+#   push:
+#     branches:
+#       - main
 
 
   workflow_dispatch:
