--- a/.github/workflows/events.yml
+++ b/.github/workflows/events.yml
@@ -9,6 +9,10 @@ on:
     paths:
        - "src/**"
        - "dependencies.txt"
+
+  pull_request:
+     branches:
+        - "feature_*"
  
 jobs:
   build:
