--- a/.github/workflows/events.yml
+++ b/.github/workflows/events.yml
@@ -3,19 +3,20 @@ name: Event Types
 on:
   push:
     branches:
+      - main
       - "feature_*"
     # branches-ignore:
     #   - "feature_*"
-    paths:
-       - "src/**"
-       - "dependencies.txt"
+    # paths:
+    #    - "src/**"
+    #    - "dependencies.txt"
 
   pull_request:
      branches:
         - main
 
   schedule:
-     - cron: "30 2 * * *"  
+     - cron: "40 15 * * *"  
 
 #
   workflow_dispatch:
